k8s/backend.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: roshambo-backend
  labels:
    app: roshambo-backend
    app.openshift.io/runtime: quarkus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: roshambo-backend
  template:
    metadata:
      labels:
        app: roshambo-backend
    spec:
      containers:
        - name: roshambo-backend
          image: quay.io/rhdevelopers/roshambo-backend
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
