k8s/frontend.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: roshambo-frontend
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"Deployment","name":"roshambo-backend"}]'
  labels:
    app: roshambo-frontend
    app.openshift.io/runtime: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: roshambo-frontend
  template:
    metadata:
      labels:
        app: roshambo-frontend
    spec:
      containers:
        - name: roshambo-frontend
          image: quay.io/rhdevelopers/roshambo-frontend
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "250m"
