k8s/backend.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: roshambo-backend-service
spec:
  selector:
    app: roshambo-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
