k8s/frontend.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: roshambo-frontend-service
spec:
  selector:
    app: roshambo-frontend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
