k8s/backend.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: roshambo-backend-route
spec:
  to:
    kind: Service
    name: roshambo-backend-service
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
